<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegistroActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="72dp"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="0dp">


        <TextView
            android:id="@+id/textView21"
            style="@style/Textos"
            android:layout_width="match_parent"
            android:layout_height="87dp"
            android:layout_marginTop="60dp"
            android:gravity="center"
            android:text="@string/registro"
            android:textSize="40sp" />

        <EditText
            android:id="@+id/editText2"
            style="@style/Textos"
            android:layout_width="301dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            android:hint="@string/introd_nombre"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/editText4"
            style="@style/Textos"
            android:layout_width="301dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            android:hint="@string/introd_email"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/editText3"
            style="@style/Textos"
            android:layout_width="301dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            android:hint="@string/introd_contr"
            android:inputType="textPersonName" />

        <Button
            android:id="@+id/button3"
            style="@style/Botones"
            android:layout_width="188dp"
            android:textSize="17sp"
            android:layout_gravity="center"
            android:layout_marginTop="80dp"
            android:layout_height="wrap_content"
            android:text="@string/crear_cuenta" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>