<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="246dp"
        android:layout_margin="20dp"
        android:background="@color/colorSecundary"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/img_pedido"
            android:layout_width="wrap_content"
            android:layout_height="162dp"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            app:srcCompat="@drawable/teclado3" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="38dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_nombre_pedido"
                style="@style/Textos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight=".50"
                android:gravity="center_horizontal"
                android:text="@string/nombre_teclado" />

            <TextView
                android:id="@+id/tv_precio_pedido"
                style="@style/Textos"
                android:layout_width="wrap_content"
                android:layout_weight=".50"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/precio_teclado" />

        </LinearLayout>

        <TextView
            android:id="@+id/fecha_llegada_pedido"
            style="@style/Textos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/fecha_llegada" />

    </LinearLayout>

</LinearLayout>