<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".Carrito.CarritoActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView21"
            style="@style/Textos"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:gravity="center"
            android:text="@string/carrito"
            android:textSize="40sp"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_carrito"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbars="vertical"
            android:layout_marginBottom="20dp">

        </androidx.recyclerview.widget.RecyclerView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <Button
                android:id="@+id/button4"
                style="@style/Botones"
                android:layout_width="185dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:onClick="onClickTienda"
                android:text="@string/seguir_comprando" />

            <Button
                android:id="@+id/button5"
                style="@style/Botones"
                android:layout_width="182dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"

                android:layout_marginLeft="10dp"
                android:text="@string/realizar_pedido" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>